Moved July 4th livestream to done.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,12 +11,13 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Tuesday, July 4th       | 3:00PM UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 4][99]    |
+
 
 ## Past Events
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Tuesday, July 4th      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 4][99]|
 | Thursday, June 1       | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 3][98]|       
 | Friday, May 19         | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack][97]                       |
 | Thursday, April 27     | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Storing Photos in Redis with the Raspberry Pi Camera and Python][96]          |
