Added next show for July 20th

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,6 +11,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Thursday, July 20th     | 3:00PM UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: New Project!][100]                                                                |
 
 
 ## Past Events
@@ -164,6 +165,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[100]: https://www.youtube.com/watch?v=ttXq_E4Galw
 [99]: https://www.youtube.com/watch?v=l__N7V0kje0
 [98]: https://www.youtube.com/watch?v=qci-pz8e5nk
 [97]: https://www.youtube.com/watch?v=mcGL6Lk2IXU
