adding graph eol notice

--- a/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
@@ -35,7 +35,7 @@ Having a rich query and aggregation engine in your Redis database opens the door
 
 :::warn
 
-Spring Redis Search and LettuSearch have been merged into multi-module client [**LettuceMod**](https://github.com/redis-developer/lettucemod). Please use LettuceMod instead.
+Spring Redis Search and LettuSearch have been merged into multi-module client [<u>**LettuceMod**</u>](https://github.com/redis-developer/lettucemod). Please use LettuceMod instead.
 
 :::
 
