--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -8,7 +8,7 @@ authors: [ajeet]
 
 :::warning DEPRECATED
 
-RedisMod has been deprecated and is no longer supported. Please refer to the [**Getting Started Tutorial**](/howtos/quick-start) for how to use Redis.
+RedisMod has been deprecated and is no longer supported. Please refer to the [<u>**Getting Started Tutorial**</u>](/howtos/quick-start) for how to use Redis.
 
 :::
 
