--- a/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
+++ b/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
@@ -7,7 +7,9 @@ authors: [ajeet]
 ---
 
 import Authors from '@theme/Authors';
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
 
+<GraphEol />
 <Authors frontMatter={frontMatter} />
 
 [RedisGraph](https://redis.com/modules/redis-graph/) is the fastest graph database that processes complex graph operations in real time, 10x – 600x faster than any other graph database. It shows how your data is connected through multiple visualization integrations including [RedisInsight](/explore/redisinsight/getting-started), Linkurious, and Graphileon.
