--- a/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
+++ b/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
@@ -7,7 +7,9 @@ authors: [ajeet]
 ---
 
 import Authors from '@theme/Authors';
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
 
+<GraphEol />
 <Authors frontMatter={frontMatter} />
 
 Pycograph is an open source tool that creates a RedisGraph model of your Python code. The tool lets you to explore your Python codebase with graph queries. With Pycograph, you can query the python code with Cypher. Additionally, it is possible to visualize the graph model using RedisInsight.
