--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -6,7 +6,9 @@ slug: /howtos/redisgraph/
 ---
 
 import RedisCard from '@theme/RedisCard';
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
 
+<GraphEol />
 The following links provides you with the available options to get started with RedisGraph
 
 <div class="row">
