--- a/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
+++ b/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
@@ -4,6 +4,9 @@ title: RedisGRAPH Cheatsheet
 sidebar_label: RedisGRAPH CheatSheet
 slug: /howtos/redisgraph/redisgraph-cheatsheet
 ---
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
+
+<GraphEol />
 
 | Command                                                                                                                                      | Purpose                                                                                                                                                                                | Syntax                                                                                                                                                                                       |
 | :------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
