--- a/docs/howtos/redisgraph/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraph/redisgraphmovies/index-redisgraphmovies.mdx
@@ -7,7 +7,9 @@ authors: [ajeet]
 ---
 
 import Authors from '@theme/Authors';
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
 
+<GraphEol />
 <Authors frontMatter={frontMatter} />
 
 IMDb(Internet Movie Database) is the world's most popular and authoritative source for information on movies, TV shows and celebrities. This application is an IMDB clone with basic account authentication and movie recommendation functionality. You will learn the power of RedisGraph and NodeJS to build a simple movie database.
