--- a/docs/howtos/redisgraph/using-rust/index-usingrust.mdx
+++ b/docs/howtos/redisgraph/using-rust/index-usingrust.mdx
@@ -7,7 +7,9 @@ authors: [ajeet]
 ---
 
 import Authors from '@theme/Authors';
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
 
+<GraphEol />
 <Authors frontMatter={frontMatter} />
 
 RedisGraph is the first queryable Property Graph database to use sparse matrices to represent the adjacency matrix
