--- a/docs/howtos/solutions/fraud-detection/transaction-risk-scoring/index-transaction-risk-scoring.mdx
+++ b/docs/howtos/solutions/fraud-detection/transaction-risk-scoring/index-transaction-risk-scoring.mdx
@@ -26,7 +26,7 @@ The score is typically based on a statistical analysis of historical transaction
 
 :::tip
 
-Transaction risk scoring is often combined in a single system with other fraud detection methods, such as <u>[**digital identity validation**](/howtos/solutions/fraud-detection/digital-identity-validation)</u>.
+Transaction risk scoring is often combined in a single system with other fraud detection methods, such as <u>[<u>**digital identity validation**</u>](/howtos/solutions/fraud-detection/digital-identity-validation)</u>.
 
 :::
 
