--- a/docs/howtos/solutions/microservices/caching/index-caching.mdx
+++ b/docs/howtos/solutions/microservices/caching/index-caching.mdx
@@ -85,7 +85,7 @@ The cache-aside pattern is useful when you need to:
 
 :::tip
 
-If you use **Redis Enterprise** and a database that uses a JDBC driver, you can take advantage of <u>[**Redis Smart Cache**](https://redis.com/blog/redis-smart-cache/)</u>, which lets you add caching to an application without changing the code. [**Click here to learn more!**](https://github.com/redis-field-engineering/redis-smart-cache)
+If you use **Redis Enterprise** and a database that uses a JDBC driver, you can take advantage of [<u>**Redis Smart Cache**</u>](https://redis.com/blog/redis-smart-cache/), which lets you add caching to an application without changing the code. [<u>**Click here to learn more!**</u>](https://github.com/redis-field-engineering/redis-smart-cache)
 
 :::
 
