--- a/docs/howtos/solutions/mobile-banking/session-management/index-session-management.mdx
+++ b/docs/howtos/solutions/mobile-banking/session-management/index-session-management.mdx
@@ -21,7 +21,7 @@ After a user has successfully entered their login credentials, mobile banking ap
 
 :::note
 
-Redis Stack supports the [**JSON**](/howtos/redisjson/) data type and allows you to index and querying JSON and [**more**](https://redis.io/docs/stack/). So your session store is not limited to simple key-value stringified data.
+Redis Stack supports the [<u>**JSON**</u>](/howtos/redisjson/) data type and allows you to index and querying JSON and [<u>**more**</u>](https://redis.io/docs/stack/). So your session store is not limited to simple key-value stringified data.
 
 :::
 
@@ -42,7 +42,7 @@ The session store houses critical information related to each user as they navig
 
 :::tip
 
-Read our ebook that answers the question: [**Are JSON Web Tokens (JWT) Safe?**](https://redis.com/docs/json-web-tokens-jwts-are-not-safe/) It discusses when and how to safely use JWTs, with battle-tested solutions for session management.
+Read our ebook that answers the question: [<u>**Are JSON Web Tokens (JWT) Safe?**</u>](https://redis.com/docs/json-web-tokens-jwts-are-not-safe/) It discusses when and how to safely use JWTs, with battle-tested solutions for session management.
 
 :::
 
@@ -109,7 +109,7 @@ Sample `bankTransaction` data view using [RedisInsight](https://redis.com/redis-
 ![bank transaction json](./images/bank-transaction-json.png)
 
 :::tip
-Download [**RedisInsight**](https://redis.com/redis-enterprise/redis-insight/) to view your Redis data or to play with raw Redis commands in the workbench. Learn more by reading the [**RedisInsight tutorial**](/explore/redisinsight/)
+Download [<u>**RedisInsight**</u>](https://redis.com/redis-enterprise/redis-insight/) to view your Redis data or to play with raw Redis commands in the workbench. Learn more by reading the [<u>**RedisInsight tutorial**</u>](/explore/redisinsight/)
 :::
 
 ### Session configuration
