--- a/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
@@ -7,7 +7,9 @@ authors: [bsb]
 ---
 
 import Authors from '@theme/Authors';
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
 
+<GraphEol />
 <Authors frontMatter={frontMatter} />
 
 ### Objectives
