--- a/docs/howtos/redisgraph/using-go/index-usinggo.mdx
+++ b/docs/howtos/redisgraph/using-go/index-usinggo.mdx
@@ -7,7 +7,9 @@ authors: [ajeet]
 ---
 
 import Authors from '@theme/Authors';
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
 
+<GraphEol />
 <Authors frontMatter={frontMatter} />
 
 RedisGraph is the fastest graph database that processes complex graph operations in real time, 10x – 600x faster than any other graph database. Show how your data is connected through multiple visualization integrations including RedisInsight, Linkurious, and Graphileon. Query graphs using the industry-standard Cypher query language and easily use graph capabilities from application code.
