--- a/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
@@ -4,6 +4,9 @@ title: Building Movies database app using RedisGraph and NodeJS
 sidebar_label: Building Movies database app using RedisGraph and NodeJS
 slug: /howtos/redisgraphmovies
 ---
+import GraphEol from '@site/docs/common/_graph-eol.mdx';
+
+<GraphEol />
 
 IMDb(Internet Movie Database) is the world's most popular and authoritative source for information on movies, TV shows and celebrities. This application is an IMDB clone with basic account authentication and movie recommendation functionality. You will learn the power of RedisGraph and NodeJS to build a simple movie database.
 
