--- a/docs/howtos/moviesdatabase/manage/index.manage.mdx
+++ b/docs/howtos/moviesdatabase/manage/index.manage.mdx
@@ -34,7 +34,7 @@ The `FT._LIST` command provides a list of all indexes in your database:
 
 ### Updating your Indexing
 
-As you are build your application and add more information to the database you may need to add new fields to the index. The `FT.ALTER` command enables you to do this.
+As you are building your application and add more information to the database you may need to add new fields to the index. The `FT.ALTER` command enables you to do this.
 
 ```
 > FT.ALTER idx:movie SCHEMA ADD plot TEXT WEIGHT 0.5
