--- a/docs/howtos/solutions/real-time-inventory/available-to-promise/index-rti-available-to-promise.mdx
+++ b/docs/howtos/solutions/real-time-inventory/available-to-promise/index-rti-available-to-promise.mdx
@@ -22,6 +22,8 @@ import GeneralAdditionalResources from '../common-rti/additional-resources.mdx';
 
 <Authors frontMatter={frontMatter} />
 
+<RealTimeInventorySourceCode />
+
 ## What is available-to-promise (ATP)?
 
 The major requirement in a **retail inventory system** is presenting an accurate, real-time view of inventory to shoppers and store associates enabling buy-online-pickup-in-store (BOPIS). Optimizing fulfillment from multiple inventory locations.
