--- a/docs/howtos/solutions/microservices/common-data/microservices-ecommerce-old.mdx
+++ b/docs/howtos/solutions/microservices/common-data/microservices-ecommerce-old.mdx
@@ -1,5 +1,5 @@
 The e-commerce microservices application consists of a frontend, built using [Next.js](https://nextjs.org/) with [TailwindCSS](https://tailwindcss.com/). The application backend uses [Node.js](https://nodejs.org). The data is stored in
-[Redis](https://redis.com/try-free/) and MongoDB/ Postgressql using [Prisma](https://www.prisma.io/docs/reference/database-reference/supported-databases). Below you will find screenshots of the frontend of the e-commerce app:
+[Redis](https://redis.com/try-free/) and MongoDB. Below you will find screenshots of the frontend of the e-commerce app:
 
 - `Dashboard`: Shows the list of products with search functionality
 
