--- a/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
+++ b/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
@@ -7,9 +7,9 @@ authors: [prasan, will]
 ---
 
 import Authors from '@theme/Authors';
-import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
-import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
-import SourceCode from '../common-data/microservices-source-code-tip.mdx';
+import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce-old.mdx';
+import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis-old.mdx';
+import SourceCode from '../common-data/microservices-source-code-tip-old.mdx';
 import RedisEnterprise from '../common-data/redis-enterprise.mdx';
 
 <Authors frontMatter={frontMatter} />
@@ -92,11 +92,6 @@ Let's outline the streams and events used below:
      ],
      "userId": "USR_4e7acc44-e91e-4c5c-9112-bdd99d799dd3",
      "orderStatusCode": 1, //order created
-     "createdOn": {
-       "$date": {
-         "$numberLong": "1677926697801"
-       }
-     },
      "createdBy": "USR_4e7acc44-e91e-4c5c-9112-bdd99d799dd3",
      "statusCode": 1
    }
@@ -148,7 +143,7 @@ Let's outline the streams and events used below:
 
 <SourceCode />
 
-## Building an interservice communication application with Redis and MongoDB
+## Building an interservice communication application with Redis
 
 We use Redis to broker the events sent between the `orders service` and the `payments service`.
 
@@ -381,7 +376,7 @@ It's a best practice to validate all incoming messages to make sure you can work
 
 :::
 
-For the purposes of our application, we make a call to update the order status in both Redis and MongoDB in the same service (For simplicity, we are not using any synchronization technique between databases rather focusing on how the data is stored and accessed in Redis). Another common pattern is to have your services write to one database, and then separately use a CDC mechanism to update the other database. For example, you could write directly to Redis, then use **RedisGears** to handle synchronizing Redis and MongoDB in the background.
+For the purposes of our application, we make a call to update the order status in both Redis and primary database in the same service (For simplicity, we are not using any synchronization technique between databases rather focusing on how the data is stored and accessed in Redis). Another common pattern is to have your services write to one database, and then separately use a CDC mechanism to update the other database. For example, you could write directly to Redis, then use **Triggers and Functions** to handle synchronizing Redis and primary database in the background.
 
 :::tip
 
