Mobile banking account dashboard tutorial

--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -132,3 +132,24 @@ Learn how to easily build, test and deploy code for common microservice and cach
 </div>
 
 </div>
+
+## Mobile Banking
+
+<div class="row">
+ <div class="col">
+  <RedisCard
+    title="Authentication and Session Storage"
+    description="Mobile Banking Authentication and Session Storage Using Redis"
+    page="/howtos/solutions/mobile-banking/session-management"
+  />
+</div>
+
+<div class="col">
+  <RedisCard
+    title="Account Dashboard"
+    description="Mobile Banking Account Dashboard Using Redis"
+    page="/howtos/solutions/mobile-banking/account-dashboard"
+  />
+</div>
+
+</div>
