Updated for Jul 20th

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,7 +11,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, July 20th     | 3:00PM UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: New Project!][100]                                                                |
+| Thursday, July 20th     | 3:00PM UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Counting Aircraft!][100]                                                                |
 
 
 ## Past Events
